Bug 1976869 - Text Fragments: Fixed edge cases when computing common string lengths. r=mccr8,dom-core

In some edge cases (eg. boundary point already at end of block), the algorithm would
return the length of the reference string as common substring length (instead of 0).

This is fixed by moving the actual common length computation part out of the loop
(which in some conditions may not run).

Differential Revision: https://phabricator.services.mozilla.com/D258057